fix: Truncating Dashboard > Recent Threads > Thread Title at one line
Truncating to accomodate threads with really long titles, and create uniform (and space conserving) heights for all Recent Threads cards

--- a/modules/ept-frontend/client/scss/ept/views/public/_boards.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_boards.scss
@@ -75,6 +75,13 @@
       font-size: $font-size-med;
       font-weight: 600;
       margin-bottom: 0.5rem;
+
+      .thread-title {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
 
     .user {
